--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -8,8 +8,9 @@
 <!-- Establish external data -->
 <link rel="stylesheet" href="../styles.css">
 <script src="../script.js"></script>
+<script src="permcomb.js"></script>
 <!-- Other head properties -->
-<title>Interactive Web Projects</title>
+<title>Permutations and Combinations</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="David Landry">
 </head>
@@ -36,8 +37,19 @@
 	
 	<!-- Main content -->
 	<div class="main">
-	<h2 class="text">Interactive Web Projects</h2>
-	<p class="text">Welcome to a collection of fun projects, tools, and programming challenges. Please select a project from the menu.</p>
+	<h2 class="text">Permutations (<i>nPr</i>) and Combinations (<i>nCr</i>)</h2>
+	<p class="text">Permutations are the number of possible orders of r objects from a pool of n. Combinations are the number of possible combinations of r objects from a pool of n where order does not matter.<br>
+	<form style="margin-left:10px" name="calcPC">
+	<label for="pc_n">Enter the total number of objects (n).</label><br>
+	<input type="number" id="pc_n" name="pc_n" min="1" autofocus><br><br>
+	<label for="pc_r">Enter the number of objects you want to find permutations of out of n total (r).</label><br>
+	<input type="number" id="pc_r" name="pc_r" min="1"><br><br>
+	<button type="button" onclick=permutation()>Find permutations (nPr)</button>
+	<button type="button" onclick=combination()>Find combinations (nCr)</button>
+	<button type="button" onclick=pcReset()>Reset</button><br><br>
+	<span id="pcAnswer"></span>
+	</form>
+	</p>
 	</div>
 	
 	<!-- Footer -->
