--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,52 @@
+<!-- portfolio -->
+<!DOCTYPE html>
+<html lang="en-US">
 
+
+<head>
+<meta charset="UTF-8">
+<!-- Establish external data -->
+<link rel="stylesheet" href="../styles.css">
+<script src="../script.js"></script>
+<!-- Other head properties -->
+<title>Portfolio of Projects</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="David Landry">
+</head>
+
+
+<body>
+
+<!-- Header -->
+<div class="header">
+<h1>Landarian Labs</h1>
+</div>
+
+<!-- Navbar -->
+<div class="navbar">
+<a href="../index.html">Home</a><a href="../resume.html">Resume</a><a href="../blog.html">Blog</a><a href="index.html">Portfolio</a><a href="../interactive/index.html">Interactive Stuff</a><a href="../links.html">Links</a>
+</div>
+
+<!-- Main body -->
+<div class="row">
+	<!-- Side bar -->
+	<div class="side">
+	<h3 class="text">David Landry's Sidebar</h3>
+	<p class="text">Links to each project will go here.</p>
+	</div>
+	
+	<!-- Main content -->
+	<div class="main">
+	<h2 class="text">David Landry's Portfolio</h2>
+	<p class="text">This will cover my projects.</p>
+	</div>
+	
+	<!-- Footer -->
+	<div class="footer">
+	<p>Copyright 2020, Landryland Labs. All rights reserved.</p>
+	</div>
+</div>
+
+</body>
+
+</html>
