--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -42,7 +42,7 @@
 	<form style="margin-left:10px" name="calcPC">
 	<label for="pc_n">Enter the total number of objects (n).</label><br>
 	<input type="number" id="pc_n" name="pc_n" min="1" autofocus><br><br>
-	<label for="pc_r">Enter the number of objects you want to find permutations of out of n total (r).</label><br>
+	<label for="pc_r">Enter the number of objects you want to find permutations or combinations of out of n total (r).</label><br>
 	<input type="number" id="pc_r" name="pc_r" min="1"><br><br>
 	<button type="button" onclick=permutation()>Find permutations (nPr)</button>
 	<button type="button" onclick=combination()>Find combinations (nCr)</button>
