Add some space between links in the side bar of resume.html.

--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 	<br>
 	<h1 style="font-variant:small-caps; font-size:2em; text-shadow:3px 3px 5px black;">David Landry's Resume</h1>
 	<p>
-	<a href="Landry Resume August 2020.docx" target="_blank">Click here to download the resume.</a><br>
+	<a href="Landry Resume August 2020.docx" target="_blank">Click here to download the resume.</a><br><br>
 	<a href="Landry CV August 2020.pdf" target="_blank">Click here to download the CV.</a>
 	<br><br>
 	<a href="https://www.linkedin.com/in/dlandry8" target="_blank"><img class="linkImage" src="linkedin.png"></a>
