update resume and CV with work history

--- a/resume.html
+++ b/resume.html
@@ -630,7 +630,132 @@
 	<a href="https://www.github.com/dlandry8/shakey" target="_blank">https://www.github.com/dlandry8/shakey</a>
 	</p><br>
 	
+	<p class="cvText"><b>
+	Disassembler
+	</b><br>
+	[ 15/10/2018 – 10/12/2018 ]
+	<br><ul style="list-style-type:circle;"><li>
+    Designed a program that translates raw data contained in Motorola S-Records into assembly language
+    code in a team of 3. I designed the program interface while my teammates wrote the subroutines that
+    translated data into opcodes and addressing.
+	</li><li>
+    Used 68k Assembly language to print corresponding opcodes from S-Record data
+	</li></ul></p>
+	<p class="cvText">
+	<a href="https://www.github.com/dlandry8/disassembler" target="_blank">https://www.github.com/dlandry8/disassembler</a>
+	</p><br>
+
+	<p class="cvText"><b>
+	FPGA Calculator
+	</b><br>
+	[ 08/11/2018 – 09/12/2018 ]
+	<br><ul style="list-style-type:circle;"><li>
+    Built a state machine with a lab partner that performs 4 arithmetic functions using binary logic
+	</li><li>
+    Designed an FPGA gate array in Verilog from truth tables and K-Maps
+	</li><li>
+	Programmed an ARM Cyclone V FPGA SoC board using Quartus Prime
+	</li></ul></p>
+	<p class="cvText">
+	<a href="https://www.github.com/dlandry8/stateCalculator" target="_blank">https://www.github.com/dlandry8/stateCalculator</a>
+	</p><br>
+
+	<p class="cvText"><b>
+	Sink the Fleet (Battleship)
+	</b><br>
+	[ 20/02/2016 – 09/03/2016 ]
+	<br><ul style="list-style-type:circle;"><li>
+    Developed a sink-the-fleet game (i.e., Battleship) using object-oriented programming in C++ in a team of
+    five students
+	</li><li>
+    Programmed a grid system with dynamic memory allocation and file input & output
+	</li></ul></p>
+	<p class="cvText">
+	<a href="https://www.github.com/dlandry8/sink-the-fleet-oop" target="_blank">https://www.github.com/dlandry8/sink-the-fleet-oop </a>
+	</p><br>
+
+
+	<!-- Work Experience -->
+	<h3 class="cvSectionTitle">
+	Work Experience
+	</h3><hr class="text" style="margin-top:0px">
 	
+	<p class="cvText">
+	<span style="color: #004090; font-size: 1.3em">
+	Senior Starbucks Kiosk Clerk
+	</span><br><b><i>
+	Fred Meyer
+	</b></i>
+	[ 20/08/2009 – Current ]
+	<br><b>
+	City: 
+	</b>
+	Lynnwood, Washington
+	<br><b>
+	Country: 
+	</b>
+	United States
+    <br><ul style="list-style-type:circle;"><li>
+    Connected with customers through serving quality handcrafted beverages, creating a warm, inviting
+    environment where our guests feel welcomed, respected, and appreciated, resulting in many repeat
+    customers and increased revenues
+    </li><li>
+    Empowered new baristas to take ownership of creating a positive experience for our guests through
+    coaching and modeling
+    </li><li>
+    Maintained documentation of cleanliness and food safety to keep the kiosk compliant with company and
+    government regulations
+    </li></ul></p><br>
+
+    <p class="cvText">
+	<span style="color: #004090; font-size: 1.3em">
+	Seattle's Best Cafe Seller
+	</span><br><b><i>
+	Borders Books 
+	</b></i>
+	[ 19/07/2006 – 14/04/2011 ]
+	<br><b>
+	City: 
+	</b>
+	Lynnwood, Washington
+	<br><b>
+	Country: 
+	</b>
+	United States
+    <br><ul style="list-style-type:circle;"><li>
+    Created a warm environment for guests through serving Seattle's Best branded coffees, teas, and pastries.
+    </li><li>
+    Recommended books, music, and movies for guests of the bookstore
+    </li><li>
+    Maintained high standards of cleanliness and food safety through daily cleaning tasks and documentation
+    </li></ul></p><br>
+
+    <p class="cvText">
+	<span style="color: #004090; font-size: 1.3em">
+	Starbucks Kiosk Clerk and Service Deli
+	</span><br><b><i>
+	Kroger 
+	</b></i>
+	[ 21/02/2002 – 14/05/2006 ]
+	<br><b>
+	City: 
+	</b>
+	Houston, Texas
+	<br><b>
+	Country: 
+	</b>
+	United States
+    <br><ul style="list-style-type:circle;"><li>
+    Served guests handcrafted Starbucks coffees, teas, and pastries
+    </li><li>
+    Used my knowledge of Boar's Head branded deli meats and cheeses to offer guests deli products that they
+    would love
+    </li><li>
+    Performed daily cleaning and food safety tasks in both the deli and the Starbucks kiosk both individually
+    and with teammates
+    </li></ul></p><br>
+
+
 
 
 
