test changing file in parallel.

--- a/resume.html
+++ b/resume.html
@@ -784,7 +784,7 @@
 	
 	<!-- Footer -->
 	<div class="footer">
-	<p>Copyright 2020, Landryland Labs. All rights reserved.</p>
+	<p>Copyright 2020, Landryland Labs. All rights reserved. Test2.</p>
 	</div>
 </div>
 
