complete resume/CV

--- a/resume.html
+++ b/resume.html
@@ -755,29 +755,85 @@
     and with teammates
     </li></ul></p><br>
 
+    <p class="cvText">
+	<span style="color: #004090; font-size: 1.3em">
+	Front End Cashier
+	</span><br><b><i>
+	Kroger 
+	</b></i>
+	[ 20/08/2001 – 19/02/2002 ]
+	<br><b>
+	City: 
+	</b>
+	Houston, Texas
+	<br><b>
+	Country: 
+	</b>
+	United States
+    <br><ul style="list-style-type:circle;"><li>
+    Assisted guests with their purchases
+    </li><li>
+    Provided excellent customer service through friendly conversation with customers and through speedy
+    checkout services
+    </li><li>
+    Ensured the accuracy of the till by carefully tending customers' cash and by counting the till at the end of
+    each shift
+    </li><li>
+	Suggested store promotions, ads, and loyalty cards to give customers additional savings
+	</li><li>
+	Contributed to the cleanliness of the front end through daily cleaning tasks and through continual
+    maintaining of the checkout lane
+	</li></ul></p><br>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Language skills -->
+	<h3 class="cvSectionTitle">
+	Language Skills
+	</h3><hr class="text" style="margin-top:0px">
+	<p class="cvText">
+	Mother tongue:
+	<br><b>
+	English
+	<br><br>
+	<span style="color: #004090">
+	Spanish
+	</span><span style="font-variant: small-caps;"><br>
+    Listening: 
+	</b>
+	A1 
+	<b>
+    Reading: 
+    </b>
+    B2
+    <b>
+    Understanding: 
+    </b>
+    B1
+    <br><b>
+    Spoken Production: 
+    </b>
+    A2
+    <b>
+    Spoken Interaction:
+	</b>
+	A2
+	</span></p><br>
 	
-	
-	
+
+    <!-- Networks and Memberships -->
+	<h3 class="cvSectionTitle">
+	Networks and Memberships
+	</h3><hr class="text" style="margin-top:0px">
+	<p class="cvText"><b>
+    IEEE
+	</b><br>
+    [ Western USA Section (Region 6), 15/10/2017 – Current ]
+	<br><br>
+    I am an active member of the IEEE, the IEEE Computer Society, and the IEEE Society of Young Professionals. I
+    joined the IEEE as a student, where I participated in workshops and lectures. As a professional member, I
+    network with members in my region and use the digital resources of the IEEE to keep up to date on modern
+    technologies.
+	</p>	
 	</span>
 	<!-- This concludes the CV. -->
 	</div>
