--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -46,7 +46,8 @@
 	<input type="number" id="pc_r" name="pc_r" min="1"><br><br>
 	<button type="button" onclick=permutation()>Find permutations (nPr)</button>
 	<button type="button" onclick=combination()>Find combinations (nCr)</button>
-	<button type="button" onclick=pcReset()>Reset</button><br><br>
+	<button type="button" onclick=pcReset()>Reset</button>
+	<button type="button" onclick=showCode()>Show Code</button><br><br>
 	<span id="pcAnswer"></span>
 	</form>
 	</p>
