--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="styles.css">
 <script src="script.js"></script>
 <!-- Other head properties -->
-<title>My way cool webpage</title>
+<title>Landarian Labs</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="David Landry">
 </head>
@@ -36,13 +36,16 @@
 	
 	<!-- Main content -->
 	<div class="main">
-	<h2 class="text">David Landry's main content</h2>
-	<p class="text">I'll think of something clever to put here soon.</p>
+	<h2 class="text">Welcome to Landarian Labs!</h2>
+	<p class="text">Landarian Labs is a place dedicated to lifelong learning and discovery, especially computer technology. 
+	For now, it is a place that showcases the work and life of Landryland Labs' founder David Landry. 
+	But, we here at Landryland Labs have a passion for collaborating with others with a passion for technology and for using it to solve difficult real-world problems.
+	So, be sure to visit regularly and look for new opportunities to collaborate, learn, and teach.</p>
 	</div>
 	
 	<!-- Footer -->
 	<div class="footer">
-	<p>Copyright 2020, Landryland Labs. All rights reserved.</p>
+	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 </div>
 
