--- a/links.html
+++ b/links.html
@@ -42,7 +42,7 @@
 	
 	<!-- Footer -->
 	<div class="footer">
-	<p>Copyright 2020, Landryland Labs. All rights reserved.</p>
+	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 </div>
 
