add to the main and bio pages

--- a/index.html
+++ b/index.html
@@ -21,17 +21,25 @@
 <h1>Landarian Labs</h1>
 </div>
 
+
 <!-- Navbar -->
 <div class="navbar">
 <a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="links.html">Links</a>
 </div>
 
+
 <!-- Main body -->
 <div class="row">
 	<!-- Side bar -->
 	<div class="side">
-	<h3 class="text">David Landry's Sidebar</h3>
-	<p class="text">Nothing to see here yet.</p>
+	<h3 class="text"><a href="landarian.html">Landarian Labs</a></h3>
+	<p class="text">More information about the history and purpose of Landarian Labs.</p>
+    <hr>
+	<h3 class="text"><a href="bio.html">David Landry's Bio</a></h3>
+	<p class="text">Learn some facts about the life of David Landry.</p>
+    <hr>
+	<h3 class="text"><a href="zebra.html">Why zebras?</a></h3>
+	<p class="text">Why are there so many zebras?</p>
 	</div>
 	
 	<!-- Main content -->
@@ -39,7 +47,7 @@
 	<h2 class="text">Welcome to Landarian Labs!</h2>
 	<p class="text">Landarian Labs is a place dedicated to lifelong learning and discovery, especially computer technology. 
 	For now, it is a place that showcases the work and life of Landryland Labs' founder David Landry. 
-	But, we here at Landryland Labs have a passion for collaborating with others with a passion for technology and for using it to solve difficult real-world problems.
+	But, we here at Landryland Labs have a passion for lifelong learning and for collaborating with others with a passion for technology and for using it to solve difficult real-world problems.
 	So, be sure to visit regularly and look for new opportunities to collaborate, learn, and teach.</p>
 	</div>
 	
