new changes to bio

--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 	</div>
 	
 	<!-- Footer -->
-	<div class="footer">
+	<div id="footer">
 	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 	
