--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -54,7 +54,7 @@
 	</div>
 	
 	<!-- Footer -->
-	<div class="footer">
+	<div id="footer">
 	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 </div>
