--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,7 +42,7 @@
 	</div>
 	
 	<!-- Footer -->
-	<div class="footer">
+	<div id="footer">
 	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 </div>
