--- a/resume.html
+++ b/resume.html
@@ -839,7 +839,7 @@
 	</div>
 	
 	<!-- Footer -->
-	<div class="footer">
+	<div id="footer">
 	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 </div>
