--- a/template.html
+++ b/template.html
@@ -43,7 +43,7 @@
 	
 	
 	<!-- Footer -->
-	<div class="footer">
+	<div id="footer">
 	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
 </div>
