--- a/interactive/index.html
+++ b/interactive/index.html
@@ -10,6 +10,7 @@
 <script src="../script.js"></script>
 <!-- Other head properties -->
 <title>Interactive Web Projects</title>
+<link rel="icon" href="../circuit.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="David Landry">
 </head>
