--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -11,6 +11,7 @@
 <script src="permcomb.js"></script>
 <!-- Other head properties -->
 <title>Permutations and Combinations</title>
+<link rel="icon" href="../circuit.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="David Landry">
 </head>
