add some info about EDS

--- a/zebra.html
+++ b/zebra.html
@@ -53,7 +53,9 @@
 	By now, you may have noticed that every page on the Landarian Labs' website features zebras. But look closer. You'll notice that every page features <b><i>pairs</i></b> of zebras. What is the significance of a pair of zebras?
 	</p><h3 class="text"><a href="https://www.ehlers-danlos.com" target="_blank"><img src="logo-450.png"></a></h3>
 	<p class="text">
-	The zebra is the icon of the Ehlers-Danlos Society. Somebody who is very special to David is affected by Ehlers-Danlos Syndrome. The pair of zebras is David's reminder to her that she will never be alone in the struggle.
+	The zebra is the icon of the Ehlers-Danlos Society. Somebody who is very special to David is affected by Ehlers-Danlos Syndrome. The pair of zebras is David's reminder to her that she will never be alone in the struggle. 
+	As such, Landarian Labs supports the work of the Ehlers-Danlos Society, which includes research into treatment and hopefully a cure. Provided down below is a page from the EDS website that explains a bit about the 
+	syndrome:
 	</p>
 	<iframe id="EDSWebsite"
     title="Ehlers-Danlos Society- What are the Ehlers-Danlos Syndromes?"
