further updated resume

--- a/resume.html
+++ b/resume.html
@@ -126,6 +126,12 @@
 	<tr class="resume"><td class="resume" colspan=3>
 	<ul><li>
 	Designing & building a digital alarm clock powered by an ATMEGA 4809 Microcontroller
+	</li><li>
+	Created a timing circuit using 555 timer ICs tuned with an RC circuit to deliver a pulse to the microcontroller once every 1.000 seconds +/- 0.001
+	</li><li>
+	Assembled a button array connected to the microcontroller’s GPIO pins, serviced by a debounce module
+	</li><li>
+	Wrote a circuit schematic and a PCB layout for the clock’s circuit board
 	</li></ul></td></tr>
 	</table></p>
 	
