--- a/resume.html
+++ b/resume.html
@@ -306,7 +306,8 @@
 	I am a very recent university graduate, having earned a bachelor of science in computer engineering. I have over
     5 years of classroom and lab project experience developing projects in C and C++ and 2 years of class project
     experience developing, testing, and debugging embedded systems. I also have nearly 20 years of customer
-    service experience, particularly in food service as a Starbucks barista.
+    service experience, particularly in food service as a Starbucks barista, which has taught me valuable teamwork 
+    and communication skills.
     </p>
 	
 	<!-- Digital Skills -->
@@ -364,7 +365,7 @@
 	</b>
 	 | 
 	<b>
-	Modelsim
+	ModelSim
 	</b>
 	 | 
 	<b>
@@ -385,6 +386,14 @@
      | 
 	<b>
 	Microsoft Office
+	</b>
+     | 
+	<b>
+	Express PCB
+	</b>
+     | 
+	<b>
+	Express SCH
 	</b><br><br>
 	Hardware Tools
 	<br><b>
@@ -481,7 +490,7 @@
 	<br><b>
 	Address:
 	</b>
-	18115 Campus Way NE Box 358500, 98011-8246 Bothell (United States)
+	18115 Campus Way NE Box 358500, 98011-8246 Bothell, Washington (United States)
 	<br>
 	<a href="https://www.uwb.edu" target="_blank">https://www.uwb.edu</a>
 	<br><b>
@@ -523,7 +532,7 @@
 	<br><b>
 	Address:
 	</b>
-	20000 68th Ave. W, 98036 Lynnwood (United States)
+	20000 68th Ave. W, 98036 Lynnwood, Washington (United States)
 	<br>
 	<a href="https://www.edcc.edu" target="_blank">https://www.edcc.edu</a>
 	<br><b>
@@ -569,16 +578,16 @@
 	Landarian Labs
 	</b><br>
 	[ 01/08/2020 – Current ]
-	<br>
-	I am currently designing a personal website that gives biographical information and highlights my development skills. The site is hosted on GitHub.
 	<br><ul style="list-style-type:circle;"><li>
-	Wrote the webpages in html without the use of templates or development tools. Just notepad++.
+	Designing a personal website that gives biographical information and highlights my development skills. The site is hosted on GitHub
 	</li><li>
-    Designed the layout of the webpages using CSS.
+	Wrote the webpages in html without the use of templates or development tools. Just notepad++
 	</li><li>
-    Implemented scripting, particularly in the interactive section, using JavaScript.
+    Coded the layout of the webpages using CSS
 	</li><li>
-    Future features will include database access using PHP.
+    Implemented scripting, particularly in the interactive section, using JavaScript
+	</li><li>
+    Future features will include database access
     </li></ul></p>
 	<p class="cvText">
 	<a href="https://www.github.com/dlandry8/dlandry8.github.io" target="_blank">https://www.github.com/dlandry8/dlandry8.github.io</a><br>
@@ -589,9 +598,10 @@
 	Make Song
 	</b><br>
 	[ 01/10/2019 – 20/10/2019 ]
-	<br>
+	<br><ul style="list-style-type:circle;"><li>
 	Created a program in MatLab with a lab partner that plays a digitally synthesized song.
-	<br><br>
+    </li></ul></p>
+	<p class="cvText">
     <a href="https://www.github.com/dlandry8/matlab_make_song" target="_blank">https://www.github.com/dlandry8/matlab_make_song</a><br>
 	</p><br>
 
