add new pages and modify index to look nicer

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 	
 	<!-- Main content -->
 	<div class="main">
+	<img id="pilchuck" src="pilchuck.jpg" style="float:right" alt="Mount Pilchuck">
 	<h2 class="text">Welcome to Landarian Labs!</h2>
 	<p class="text">Landarian Labs is a place dedicated to lifelong learning and discovery, especially computer technology. 
 	For now, it is a place that showcases the work and life of Landryland Labs' founder David Landry. 
 	But, we here at Landryland Labs have a passion for lifelong learning and for collaborating with others with a passion for technology and for using it to solve difficult real-world problems.
-	So, be sure to visit regularly and look for new opportunities to collaborate, learn, and teach.</p>
+	So, be sure to visit regularly and look for new opportunities to collaborate, learn, and teach.
+	</p>
 	</div>
 	
 	<!-- Footer -->
