--- a/jessica.html
+++ b/jessica.html
@@ -5,8 +5,11 @@
 <html lang="en-US">
 
 <head>
+<meta charset="UTF-8">
 <title>Hi Jessica!</title>
 <link rel="stylesheet" href="jessica.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="David Landry">
 </head>
 
 <body>
