improve Jessica's page

--- a/jessica.html
+++ b/jessica.html
@@ -16,38 +16,36 @@
 
 <div id="pageHeader">
     <h1>
-    Hi Jessica!
+    <font color="red">Hi</font> <font color="yellow">Je</font><font color="green">ss</font><font color="teal">i</font><font color="blue">c</font><font color="purple">a!</font>
 	</h1>
 </div>
 
 <div id="row">
     <div id="sidebar">
-	<p id="Aug142020" onclick="changeSource(this.id)">
-    14 August 2020
-    </p>
-	<p id="Aug112020" onclick="changeSource(this.id)">
-	11 August 2020
-	</p>
-	<p id="shatterMe" onclick="changeSource(this.id)">
-	"Shatter Me" by Lindsey Stirling, featuring Lzzy Hale
-	</p>
-	<p id="songOfWomen" onclick="changeSource(this.id)">
-	"Song of Women" by The HU, featuring Lzzy Hale
-	</p>
+	    <p id="Aug142020" onclick="changeSource(this.id)">
+        14 August 2020
+        </p>
+	    <p id="Aug112020" onclick="changeSource(this.id)">
+	    11 August 2020
+	    </p>
+	    <p id="shatterMe" onclick="changeSource(this.id)">
+	    "Shatter Me" by Lindsey Stirling, featuring Lzzy Hale
+	    </p>
+	    <p id="songOfWomen" onclick="changeSource(this.id)">
+	    "Song of Women" by The HU, featuring Lzzy Hale
+	    </p>
     </div>
 
     <div id="mainSection">
-	<img src="calla.jpg" id="lily" alt="Some pink calla lillies.">
-	<h2>
-	Welcome to Jessica's Page of Encouragement
-	</h2>
-	<p>
-    This page is for you! As often as I can, I will post encouragement for you, whether in text or video form.
-	</p>
-	<span id="currentEncouragement">
-	<!-- Changed by script -->
-	</span>
-    </div>
+	    <img src="calla.jpg" id="lily" alt="Some pink calla lillies.">
+        <h2>
+        Welcome to Jessica's Page of Encouragement
+        </h2>
+		<img src="calla.jpg" id="lily2" alt="Some pink calla lillies.">
+        <span id="currentEncouragement">
+        This page is for you! As often as I can, I will post encouragement for you, whether in text or video form.
+        </span>
+	</div>
 	
 	<div id="footer">
 	<p>
