new encouragement for Jessica

--- a/jessica.html
+++ b/jessica.html
@@ -22,6 +22,9 @@
 
 <div id="row">
     <div id="sidebar">
+	    <p id="Aug232020" onclick="changeSource(this.id)">
+		23 August 2020
+		</p>
 	    <p id="Aug142020" onclick="changeSource(this.id)">
         14 August 2020
         </p>
