modify file slightly

--- a/hidden.html
+++ b/hidden.html
@@ -6,7 +6,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Hi Jessica!</title>
+<title>Hidden Page for Jessica</title>
 <link rel="stylesheet" href="jessica.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="David Landry">
@@ -46,13 +46,13 @@
         </h2>
 		<img src="calla.jpg" id="lily2" alt="Some pink calla lillies.">
         <span id="currentEncouragement">
-        This page is for you! As often as I can, I will post encouragement for you, whether in text or video form.
+        Welcome Jessica. This page is for you! As often as I can, I will post encouragement for you, whether in text or video form.
         </span>
 	</div>
 	
 	<div id="footer">
 	<p>
-	Written by David Landry for Jessica as a reminder that she will never be alone, no matter what.
+	Written by David Landry for Jessica.
 	</p>
 	</div>
 </div>
