change Jessica slightly

--- a/hidden.html
+++ b/hidden.html
@@ -16,7 +16,7 @@
 
 <div id="pageHeader">
     <h1>
-    <font color="red">Hi</font> <font color="yellow">Je</font><font color="green">ss</font><font color="teal">i</font><font color="blue">c</font><font color="purple">a!</font>
+    <font color="red">We</font><font color="yellow">l</font><font color="green">co</font><font color="teal">m</font><font color="blue">e</font> <font color="purple">Je</font><font color="red">ss</font><font color="yellow">i</font><font color="green">c</font><font color="blue">a</font><font color="purple">!</font>
 	</h1>
 </div>
 
