--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
 
 <!-- Navbar -->
 <div class="navbar">
-<a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="links.html">Links</a>
+<a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="contact.html">Contact us</a>
 </div>
 
 <!-- Main body -->
