--- a/contact.html
+++ b/contact.html
@@ -18,25 +18,25 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="contact.html">Contact us</a>
 </div>
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
+	<div id="side">
 	<h3 class="text">David Landry's Sidebar</h3>
 	<p class="text">Nothing to see here yet.</p>
 	</div>
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text">David Landry's Links</h2>
 	<p class="text">Links to all kinds of places will feature here.</p>
 	</div>
