--- a/interactive/index.html
+++ b/interactive/index.html
@@ -18,25 +18,25 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="../index.html">Home</a><a href="../resume.html">Resume</a><a href="../blog.html">Blog</a><a href="../portfolio/index.html">Portfolio</a><a href="index.html">Interactive Stuff</a><a href="../contact.html">Contact us</a>
 </div>
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
+	<div id="side">
 	<h3 class="subtitle"><a href="permcomb.html">Permutations (<i>nPr</i>) &amp; Combinations(<i>nCr</i>)</a></h3>
 	<p class="subtext">Calculate the number of permutations &amp; combinations of a subgroup r from a total number of objects n.</p>
 	</div>
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text">Interactive Web Projects</h2>
 	<p class="text">Welcome to a collection of fun projects, tools, and programming challenges. Please select a project from the menu.</p>
 	</div>
