--- a/template.html
+++ b/template.html
@@ -1,3 +1,4 @@
+
 <!-- main folder -->
 <!DOCTYPE html>
 <html lang="en-US">
@@ -18,26 +19,26 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="contact.html">Contact us</a>
 </div>
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
+	<div id="side">
 	<h3 class="text"><!--Sidebar title--></h3>
 	<p class="text"><!--Sidebar content--></p>
 	</div>
 	
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text"><!--Page Title--></h2>
 	<p class="text"><!--Page content--></p>
 	</div>
