--- a/zebra.html
+++ b/zebra.html
@@ -18,21 +18,21 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="contact.html">Contact us</a>
 </div>
 
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
+	<div id="side">
 	<h3 class="text"><a href="landarian.html">Landarian Labs</a></h3>
 	<p class="text">More information about the history and purpose of Landarian Labs.</p>
     <hr>
@@ -46,7 +46,7 @@
 	
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text">Why Zebras?</h2>
 	<img src="zebra-camo.jpg" class="text">
 	<p class="text">
