--- a/index.html
+++ b/index.html
@@ -18,36 +18,37 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="contact.html">Contact us</a>
 </div>
 
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
+
 	<!-- Side bar -->
-	<div class="side">
-	<h3 class="text"><a href="landarian.html">Landarian Labs</a></h3>
-	<p class="text">More information about the history and purpose of Landarian Labs.</p>
+	<div id="side">
+	<h3><a href="landarian.html">Landarian Labs</a></h3>
+	<p>More information about the history and purpose of Landarian Labs.</p>
     <hr>
-	<h3 class="text"><a href="bio.html">David Landry's Bio</a></h3>
-	<p class="text">Learn some facts about the life of David Landry.</p>
+	<h3><a href="bio.html">David Landry's Bio</a></h3>
+	<p>Learn some facts about the life of David Landry.</p>
     <hr>
-	<h3 class="text"><a href="zebra.html">Why zebras?</a></h3>
-	<p class="text">Why are there so many zebras?</p>
+	<h3><a href="zebra.html">Why zebras?</a></h3>
+	<p>Why are there so many zebras?</p>
 	</div>
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<img id="pilchuck" src="pilchuck.jpg" style="float:right" alt="Mount Pilchuck">
-	<h2 class="text">Welcome to Landarian Labs!</h2>
-	<p class="text">Landarian Labs is a place dedicated to lifelong learning and discovery, especially computer technology. 
+	<h2>Welcome to Landarian Labs!</h2>
+	<p>Landarian Labs is a place dedicated to lifelong learning and discovery, especially computer technology. 
 	For now, it is a place that showcases the work and life of Landryland Labs' founder David Landry. 
 	But, we here at Landryland Labs have a passion for lifelong learning and for collaborating with others with a passion for technology and for using it to solve difficult real-world problems.
 	So, be sure to visit regularly and look for new opportunities to collaborate, learn, and teach.
@@ -58,6 +59,7 @@
 	<div id="footer">
 	<p>Copyright 2020, Landarian Labs. All rights reserved.</p>
 	</div>
+	
 </div>
 
 </body>
