--- a/interactive/permcomb.html
+++ b/interactive/permcomb.html
@@ -19,25 +19,25 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="../index.html">Home</a><a href="../resume.html">Resume</a><a href="../blog.html">Blog</a><a href="../portfolio/index.html">Portfolio</a><a href="index.html">Interactive Stuff</a><a href="../contact.html">Contact us</a>
 </div>
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
-	<h3 class="subtitle"><a href="permcomb.html">Permutations (<i>nPr</i>) &amp; Combinations(<i>nCr</i>)</a></h3>
-	<p class="subtext">Calculate the number of permutations &amp; combinations of a subgroup r from a total number of objects n.</p>
+	<div id="side">
+	<h3><a href="permcomb.html">Permutations (<i>nPr</i>) &amp; Combinations(<i>nCr</i>)</a></h3>
+	<p>Calculate the number of permutations &amp; combinations of a subgroup r from a total number of objects n.</p>
 	</div>
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text">Permutations (<i>nPr</i>) and Combinations (<i>nCr</i>)</h2>
 	<p class="text">Permutations are the number of possible orders of r objects from a pool of n. Combinations are the number of possible combinations of r objects from a pool of n where order does not matter.<br>
 	<form style="margin-left:10px" name="calcPC">
