--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,25 +19,25 @@
 <body>
 
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="../index.html">Home</a><a href="../resume.html">Resume</a><a href="../blog.html">Blog</a><a href="index.html">Portfolio</a><a href="../interactive/index.html">Interactive Stuff</a><a href="../contact.html">Contact us</a>
 </div>
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
+	<div id="side">
 	<h3 class="text">David Landry's Sidebar</h3>
 	<p class="text">Links to each project will go here.</p>
 	</div>
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text">David Landry's Portfolio</h2>
 	<p class="text">This will cover my projects.</p>
 	</div>
